// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should set the data for "expense"  one expense that is 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling KES
    1.95
  </p>
</div>
`;

exports[`Should set the data for expenses filtered by text 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling KES
    1,140.00
  </p>
</div>
`;
